doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/share/bluej/jdk/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/javafx-base-20.0.1-linux.jar:/usr/share/bluej/javafx-base-20.0.1.jar:/usr/share/bluej/javafx-controls-20.0.1-linux.jar:/usr/share/bluej/javafx-controls-20.0.1.jar:/usr/share/bluej/javafx-fxml-20.0.1-linux.jar:/usr/share/bluej/javafx-graphics-20.0.1-linux.jar:/usr/share/bluej/javafx-graphics-20.0.1.jar:/usr/share/bluej/javafx-media-20.0.1-linux.jar:/usr/share/bluej/javafx-media-20.0.1.jar:/usr/share/bluej/javafx-swing-20.0.1-linux.jar:/usr/share/bluej/javafx-web-20.0.1-linux.jar:/usr/share/bluej/junit-4.12.jar:/usr/share/bluej/junit-jupiter-5.5.2.jar:/usr/share/bluej/junit-jupiter-api-5.5.2.jar:/usr/share/bluej/junit-jupiter-engine-5.5.2.jar:/usr/share/bluej/junit-jupiter-params-5.5.2.jar:/usr/share/bluej/junit-platform-commons-1.5.2.jar:/usr/share/bluej/junit-platform-engine-1.5.2.jar:/usr/share/bluej/junit-platform-launcher-1.5.2.jar:/usr/share/bluej/junit-platform-suite-api-1.5.2.jar:/usr/share/bluej/junit-vintage-engine-5.5.2.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/opentest4j-1.2.0.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/javafx/javafx.base.jar:/usr/share/bluej/javafx/javafx.controls.jar:/usr/share/bluej/javafx/javafx.fxml.jar:/usr/share/bluej/javafx/javafx.graphics.jar:/usr/share/bluej/javafx/javafx.media.jar:/usr/share/bluej/javafx/javafx.properties.jar:/usr/share/bluej/javafx/javafx.swing.jar:/usr/share/bluej/javafx/javafx.web.jar:/home/admin/APCSAGUICMDlineStory
-d
/home/admin/APCSAGUICMDlineStory/doc
-encoding
UTF-8
-charset
UTF-8
/home/admin/APCSAGUICMDlineStory/MusicPlayer.java
<---- end of javadoc command ---->
Loading source file /home/admin/APCSAGUICMDlineStory/MusicPlayer.java...
Constructing Javadoc information...
/home/admin/APCSAGUICMDlineStory/MusicPlayer.java:1: error: package sun.audio does not exist
import sun.audio.AudioPlayer;
                ^
/home/admin/APCSAGUICMDlineStory/MusicPlayer.java:2: error: package sun.audio does not exist
import sun.audio.AudioStream;
                ^
/home/admin/APCSAGUICMDlineStory/MusicPlayer.java:18: error: cannot find symbol
    private AudioStream as;
            ^
  symbol:   class AudioStream
  location: class MusicPlayer
/home/admin/APCSAGUICMDlineStory/MusicPlayer.java:19: error: cannot find symbol
    private AudioPlayer p;
            ^
  symbol:   class AudioPlayer
  location: class MusicPlayer
4 errors
